v11.9
If an expedition fails (only from storybits?) then the rover doesn't get deleted (Thanks arl85).

v11.8
Found a save with the same as 11.6, but for Residences (GetFreeSpace log spam).
This might not be from a mod.

v11.7
Some mod isn't checking for a table beforehand (maybe?).

v11.6
Didn't fully cleanup Workplaces that had buildings added to the wrong label (GetFreeWorkSlots log spam).

v11.5
Missed a DLC check (thanks Charmich0802).

v11.4
Main Menu Music mod option was ignored.
Make Dust Sickness from storybit not effect Biorobots:
It doesn't always cure colonists for some reason and Biorobots never die, plus they're robots...
Also checks on load for any dust sick Biorobots and removes the trait.
There's a mod option if you prefer dust sick Biorobots.

v11.3
Didn't check for DLC for some storybit fixes and fixed some issues with loading saves.
Cyber War: Anyone up for some good old blackmailing? Never rewards funds only lowers standing.
Eureka!: Option 2/3: Always picks from Biotech instead of random category.
(Thanks Lycrist Katkiller/Dark Master)

v11.2
RC Harvester doesn't collect waste rock (Thanks Dark Master).
Added my mod:
RC Constructor Terraformer Routes

v11.1
Meteor landed on under construction track while dismantling (Thanks Tremualin).

v11.0
Changed g_CObjectFuncs to CObject for SetScale fix (it only worked after loading twice).

v10.9
Survey Offer Option 2 never starts (same issue).

v10.8
Cure For Cancer: Rare Outcome never starts (partially same issue as Free Will: Violent Urges Solved).

v10.7
Free Will: Violent Urges Solved never shows up after researching story bit tech (Thanks Dark Master).

v10.6
Some mod is adding OpenAirGyms to the Workplace label,
which means "attempt to call a nil value (method 'GetFreeWorkSlots')" log spam.

v10.5
Added my School Skip Attained Perks mod:
Schools won't pick a trait the colonist already has when training is complete.

v10.4